2012-05-12 Massimo Manghi <mxmanghi@apache.org>
    * src/rivetParser.c: add shorthand expression <?= ... ?> for <? puts -nonewline "..." ?> (contributed 
    by Jeff Lawson, addresses #53217, tclrivetparser still to be fixed)
    * tests/shorthand.[test|rvt]: add test of shorthand notation for string output 
    * rivet/rivet-tcl/cookie.tcl: add support for HttpOnly flag (contributed by Cyril Shtumf, 
    fixes bug #53224)
    * rivet/packages/session/session-class.tcl: support for HttpOnly flag improves security and reduces
    the risk of cross-site scripting attacks (contributed by Cyril Shtumf, fixes #52224)
    * rivet/packages/dio/dio.tcl: wrong SQL syntax generated in delete method when multiple fields are
    used in the selection clause (contributed by Cyril Shtumf, fixes bug #53222)
    * rivet/packages/dio/dio_Mysql.tcl: Mysql connection must be checked when connection reference is reused
    because it could have dropped (contributed by Cyril Shtumf, fixes #53221)

2012-05-09 Massimo Manghi <mxmanghi@apache.org>
    * rivet/rivet-tcl/http_accept.tcl: new command ::rivet::http_accept 
    * doc/xml/commands.xml: new manual entry for ::rivet::http_accept 
    * doc/rivet.xml: Add new file entities.xml describing package 'RivetEntities' 
    (only a stub, to be elaborated)
    * doc/xml/entities.xml: New manual page for package 'RivetEntities'

2012-05-08 Massimo Manghi <mxmanghi@apache.org>
    * src/rivetPkgInit.c: reinstated safe interpreters initialization
    * doc/xml/install.xml: corrections and further elaboration of explanation for
    the --disable-import-rivet-commands

2012-05-07 Massimo Manghi <mxmanghi@apache.org>
    * src/apache-2/rivetCore.c: new command ::rivet::inspect implementing function
    Rivet_InspectCmd
    * src/apache-2/rivetConf.c: Ancillary functions for instrospection procedure Rivet_InspectCmd
    * src/apache-2/Makefile.am: Added handling of rivetConf.c