@@ -12,11 +12,11 @@ package require tclrivet
 proc main {} {
     global argv
     for {set i 0} {$i < [llength $argv] - 1} {incr i} {
-	source [lindex $argv $i]
+        source [lindex $argv $i]
     }
     set script [rivet::parserivet [lindex $argv end]]
     if { [catch {eval $script } err] } {
-	puts "Error: $err"
+        puts "Error: $err"
     }
 }
 
